# cloud-forensic-snapshot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
cfs/: __init__.py  __main__.py  config.py  export.py  types.py  utils.py
cfs/cli/: __init__.py  commands.py  preflight.py
cfs/collectors/: __init__.py  aws.py  azure.py  base.py  gcp.py
cfs/preservation/: __init__.py  chain_of_custody.py  hashing.py  immutability.py  manifest.py
private_server/: Dockerfile  README.md  requirements.txt  server.py
tests/integration/: test_aws.py  test_azure.py  test_gcp.py
tests/unit/: test_hashing.py  test_manifest.py
